force-app/main/default/objects/Office__c/fields/Locations_List__c.field-meta.xml
<CustomField>
    <fullName>Locations_List__c</fullName>
    <label>TriviaLocationsList</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>