force-app/main/default/objects/Office__c/fields/Trivia__c.field-meta.xml
<CustomField>
    <fullName>Trivia__c</fullName>
    <label>Trivia</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>