force-app/main/default/objects/Office__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Locations_List__c</columns>
    <columns>Trivia__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>